--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,9 +11,8 @@
 
   <timeline periods=periods at=selectedPeriod></timeline>
 
-  <div>
-    chart
-  </div>
+  <map dataset=dataset></map>
+  
 
   <div>
     accountability
