map is now responsive

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
 
   <timeline periods=periods at=selectedPeriod></timeline>
 
-  <map dataset=periodData width=mapWidth height=mapHeight display=dataProperty></map>
+  <map dataset=periodData display=dataProperty></map>
 
   <div>
     accountability
