- removed some junk

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,5 +17,13 @@
 }
 
 
+h1 {
+    color: #97a6a9;
+}
 
+h2 {
+    margin-top: 1.5em;
+    border-top: 1px solid #5e686b;
+    color: #97a6a9;
+}
 
