--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,23 @@
 
 <div class="content-wrapper" ng-controller="MainCtrl">
 
+  <div class="text-center">
+    <h1>Urbanization</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+  
+
+
+
   <div>
+    
+    <h2>Map</h2>
+
     <select ng-model="dataProperty">
       <option value="uPopIncrease">Increase in urban population</option>
       <option value="uGrowth">Change in urbanization rate</option>
       <option value="urbanization">Percentage of people living in urban area</option>
-      <option value="uGrowth">Growth of the urban population</option>
+      <!--<option value="uGrowth">Growth of the urban population</option>-->
     </select>
   </div>
 
@@ -14,8 +25,13 @@
 
   <map dataset=periodData display=dataProperty></map>
 
+
+
   <div>
-    accountability
+
+    <h2>Accountability</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
   </div>
 
 </div>
