changed the country details panel to fixed position and made it responsive

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,8 +22,13 @@ h1 {
 }
 
 h2 {
-    margin-top: 1.5em;
+    margin-top: 40px;
+    margin-bottom: 15px;
+    padding-top: 7px;
     border-top: 1px solid #5e686b;
     color: #97a6a9;
 }
 
+.col-xs-12, .col-md-6, .col-md-12 {
+    padding: 0 15px 0 0;
+}
