--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,18 +1,15 @@
 
 <div class="content-wrapper" ng-controller="MainCtrl">
 
-  <div class="text-center">
+
+  <div class="col-md-12 text-center">
     <h1>Urbanization</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
   
 
-
-
-  <div>
-    
+  <div class="col-md-12">
     <h2>Map</h2>
-
     <select ng-model="dataProperty">
       <option value="uPopIncrease">Increase in urban population</option>
       <option value="uGrowth">Change in urbanization rate</option>
@@ -21,17 +18,18 @@
     </select>
   </div>
 
-  <timeline periods=periods at=selectedPeriod></timeline>
 
-  <map dataset=periodData display=dataProperty></map>
-
-
-
-  <div>
-
-    <h2>Accountability</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+  <div class="col-md-12">
+    <timeline periods=periods at=selectedPeriod></timeline>
+    <map dataset=periodData display=dataProperty></map>
   </div>
+
+
+  <div class="col-md-12">
+    <h2>Accountability</h2>
+    <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+
 
 </div>
