--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,30 +2,29 @@
 <div class="content-wrapper" ng-controller="MainCtrl">
 
 
-  <div class="col-md-12 text-center">
+  <div class="col-lg-12 text-center">
     <h1>Urbanization</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
   
 
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <h2>Map</h2>
-    <select ng-model="dataProperty">
-      <option value="uPopIncrease">Increase in urban population</option>
-      <option value="uGrowth">Change in urbanization rate</option>
-      <option value="urbanization">Percentage of people living in urban area</option>
-      <!--<option value="uGrowth">Growth of the urban population</option>-->
-    </select>
+    <div class="btn-group">
+      <button type="button" ng-click="setDataProperty('uPopIncrease')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uPopIncrease'}">Increase in urban population</button>
+      <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Change in urbanization rate</button>
+      <button type="button" ng-click="setDataProperty('urbanization')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='urbanization'}">Percentage of people living in urban area</button>
+    </div>
   </div>
 
 
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <timeline periods=periods at=selectedPeriod></timeline>
-    <map dataset=periodData display=dataProperty></map>
+    <map dataset=periodData display=dataProperty min=min max=max></map>
   </div>
 
 
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <h2>Accountability</h2>
     <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
