--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,6 @@
   <div class="col-lg-12">
     <h2>Map</h2>
     <div class="btn-group">
-      <button type="button" ng-click="setDataProperty('uPopIncrease')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uPopIncrease'}">Increase in urban population</button>
       <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Change in urbanization rate</button>
       <button type="button" ng-click="setDataProperty('urbanization')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='urbanization'}">Percentage of people living in urban area</button>
     </div>
@@ -20,7 +19,7 @@
 
   <div class="col-lg-12">
     <timeline periods=periods at=selectedPeriod></timeline>
-    <map dataset=periodData display=dataProperty min=min max=max></map>
+    <map dataset=periodData display=dataProperty min=min max=max scale=scale></map>
   </div>
 
 
