--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,9 +11,10 @@
   <div class="col-lg-12">
     <h2>Map</h2>
     <div class="btn-group">
-      <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Change in urbanization rate</button>
       <button type="button" ng-click="setDataProperty('urbanization')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='urbanization'}">Percentage of people living in urban area</button>
+      <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Change in urbanization rate</button>
     </div>
+    <p>{{dataDescription}}</p>
   </div>
 
 
