--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,10 @@ h2 {
     color: #97a6a9;
 }
 
+.description {
+    margin: 1em 0 1em 0;
+}
+
 .col-xs-12, .col-md-6, .col-md-12 {
     padding: 0 15px 0 0;
 }
