--- a/app/styles/timeline.scss
+++ b/app/styles/timeline.scss
@@ -1,55 +1,105 @@
-
-@mixin rounded($radius: 0.8em) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  border-radius: $radius;
+.timeline-wrapper {
+  position:relative;
+  margin:0;
+  padding:5px;
+  width:100%;
 }
 
+.controls {
+  display:inline-block;
+  position: relative;
+  margin:0;
+  padding:0;
+  width: 5%;
+  float: left;
+}
 
 .timeline {
-	padding: 0;
-	margin: 20px 0 20px 0;
+  display:inline-block;
+  position: relative;
+  margin:0;
+  padding:0;
+  width: 95%;
+  float: left;
+}
 
-	ul {
-		padding: 0;
-		margin: 0;
-		list-style: none;
-	}
+.labels {
+  margin:0;
+  padding:0;
+  z-index:50;
+}
 
-	li {
-		padding: 0;
-		margin: 0;
-		float: left;
-		cursor: pointer;
-	}
+.label {
+  display:inline-block;
+  position:absolute;
+  height:2em;
+  text-align:center;
+  margin:0.5em 0 0 0;
+  padding:0;
+  color: #5e686b;
+}
 
-	.line {
-		/* display: inline-block; */
-		padding: 0;
-		margin: 0;
-		width: 100%;
-		height: 1.5em;
-		background-color: #f5f5f5;
-		@include rounded();
+.ticks {
+  margin:0;
+  padding:0;
+  z-index: 150;
+}
 
-		li {
-			display: inline-block;
-			height: 100%;
-		}
+.tick {
+  display:inline-block;
+  position:absolute;
+  width:0px;
+  height:1em;
+  margin:0;
+  padding:0;
+  border-right: 1px solid #000;
+}
 
-		.selected {
-			background-color: #a1a1a1;
-			@include rounded();
-		}
+.periods {
+  margin:0;
+  padding:0;
+  height:0.5em;
+  z-index:100;
+}
 
-	}
+.period {
+  display:inline-block;
+  position:absolute;
+  height:0.5em;
+  margin:0 0 0 1px;
+  padding:0;
+  background-color: #f5f5f5;
+  cursor:pointer;    
+}
 
-	.labels {
-		li {
-			font-size: 0.6em;
-			text-align: center;
-		}
-	}
+.selected {
+  background-color: #a1a1a1 !important;
+  /*cursor:move;*/
+  cursor:default;
+}
 
+.clear {
+  clear: both !important;
+}
+
+
+/* media query */
+@media (max-width: 700px) {
+
+  .label {
+    display: none;
+  }
+
+  .label:first-child {
+    display: inline-block;
+  }
+
+  .label:last-child {
+    display: inline-block;
+  }
 
 }
+
+
+
+
