--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,15 +4,10 @@
 
   <div class="col-lg-12 text-center">
     <h1>Urbanization</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  
 
-  <div class="col-lg-12">
-    <h2>Map</h2>
     <div class="btn-group">
-      <button type="button" ng-click="setDataProperty('urbanization')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='urbanization'}">Percentage of people living in urban area</button>
-      <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Change in urbanization rate</button>
+      <button type="button" ng-click="setDataProperty('urbanization')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='urbanization'}">Urbanization</button>
+      <button type="button" ng-click="setDataProperty('uGrowth')" class="btn btn-default btn-xs" ng-class="{active: dataProperty=='uGrowth'}">Urban growth rate</button>
     </div>
     <p class="description">{{dataDescription}}</p>
   </div>
@@ -25,10 +20,8 @@
   </div>
 
 
-  <div class="col-lg-12">
-    <h2>Accountability</h2>
-    <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="col-lg-12 footer">
+    <p>Source: <a href="http://esa.un.org/unup/cd-rom/urban-rural-population.htm">United Nations, Department of Economic and Social Affairs, Population Division</a></p>
   </div>
 
 
